# ai_project_rust_services

./: Makefile  cargo.toml
react_backend/: Cargo.toml  build.rs
react_backend/src/: main.rs
react_backend/src/init/: configure_mongo.rs  mod.rs
react_backend/src/models/: menu.rs
service_registry/: Cargo.toml  build.rs
service_registry/src/: server.rs
service_registry/src/model/: store.rs
service_registry/src/service/: registry.rs
text_analysis_bff/: Cargo.toml  build.rs
text_analysis_bff/src/: main.rs
text_analysis_bff/src/model/: registry.rs
text_analysis_bff/src/service/: registry.rs
