[package]
name = "bff"
version = "0.1.0"
edition = "2024"

[[bin]]
name="client-registry"
path="src/main.rs"




[dependencies]
tonic = "0.13.1"
prost = "0.13.5"
tokio ={version = "1.45.0" ,features = ["macros","rt-multi-thread","full"]}
serde = "1.0.219"
futures = "0.3.31"


[dependencies.mongodb]
version = "3.2.3"


[build-dependencies]
tonic-build = "0.13.1"
