[package]
name = "service-registry"
version = "0.1.0"
edition = "2021"

[[bin]]
name="service-registry"
path="src/server.rs"

[dependencies]
tonic = "0.13.1"
prost = "0.13.5"
tokio ={version = "1.45.0" ,features = ["macros","rt-multi-thread"]}
log = "0.4.27"
env_logger = "0.11.8"
tonic-reflection = "0.13.1"

[build-dependencies]
tonic-build = "0.13.1"