[package]
name = "text_analysis_bff"
version = "0.1.0"
edition = "2024"


[dependencies]
tonic = "0.13.1"
prost = "0.13.5"
tokio ={version = "1.45.0" ,features = ["macros","rt-multi-thread"]}
log = "0.4.27"
env_logger = "0.11.8"
tonic-reflection = "0.13.1"
hyper-util = "0.1.11"
hyper = "1.6.0"
tower = "0.5.2"
http = "1.3.1"
tonic_web = "0.13.1"

[build-dependencies]
tonic-build = "0.13.1"